# pipeline-with-agent

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
agent_sdk/unittest_generation/: README.md  __init__.py  agent.py  client.py  demo.py  prompts.py  requirements.txt
agent_sdk/unittest_generation/prompts/: test_generation.md
dashboard/: __init__.py  app.py
data/example_repo/: calculator.py
docs/: claude.md
src/: __init__.py
src/agents/: __init__.py  base.py  claude_agent.py
src/agents/skills/: README.md
src/agents/tools/: README.md
src/core/: __init__.py  agent.py  cache.py  sandbox.py
src/examples/: __init__.py  mr_test_generator.py
src/pipeline/: __init__.py  conditions.py  flow.py
src/sandbox/: __init__.py  filesystem.py
workspace/: repo_utils.py
