[project]
name = "agent-pipeline"
version = "0.1.0"
description = "基于 Prefect 的智能体数据处理流水线系统"
requires-python = ">=3.10"
dependencies = [
    "prefect>=2.14.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
dashboard = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
